# hoi4-hax

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  memory.cpp  memory.hpp  render.hpp  vcpkg.json
loader/: haxstate.hpp  loader.cpp
